<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.campaignar.smis.campaignar.Fragments.FragmentYourInterestsDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <ayar.oktay.advancedtextview.AdvancedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_text_one"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:lineSpacingExtra="1.5dp"
            app:fontFile="@string/Gotham_Light" />


        <ayar.oktay.advancedtextview.AdvancedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/dummy_text_two"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:lineSpacingExtra="1.5dp"
            app:fontFile="@string/Gotham_Light" />

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
