<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/overlay"
    android:weightSum="12">


    <View
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="0dp"></View>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/play" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="4">

        <ImageView
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/text"
            android:layout_marginRight="5dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/image_360_144"/>

        <ayar.oktay.advancedtextview.AdvancedTextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            app:fontFile="@string/Gotham_Medium"
            android:textColor="@color/White"
            android:text="BJP NATIONAL MEETING" />

    </RelativeLayout>

    <View
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"></View>

    <LinearLayout
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <ayar.oktay.advancedtextview.AdvancedTextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="13sp"
            app:fontFile="@string/Gotham_Book"
            android:textColor="@color/grey"
            android:text="Live In 20 min" />

        <ImageView
            android:layout_marginTop="5dp"
            android:layout_width="1dp"
            android:layout_height="18dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/White"/>

        <ayar.oktay.advancedtextview.AdvancedTextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            app:fontFile="@string/Gotham_Book"
            android:textColor="@color/grey"
            android:textSize="13sp"
            android:text="10K Online " />


        <ImageView
            android:layout_marginTop="5dp"
            android:layout_width="1dp"
            android:layout_height="18dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/White"/>

        <ayar.oktay.advancedtextview.AdvancedTextView
            android:id="@+id/tvShare"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            app:fontFile="@string/Gotham_Bold"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="SHARE" />


        <ImageView
            android:id="@+id/ivShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="@drawable/ic_share_shifted"/>

    </LinearLayout>

</LinearLayout>